--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-core:17.4.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.firebase:firebase-analytics:17.4.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:multidex:1.0.3'
