--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailActivity"></activity>
-        <activity android:name=".ViewActivity" />
+        <activity android:name="com.example.DetailActivity"></activity>
+        <activity android:name=".ui.ViewActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
