--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,19 @@
     package="com.example.interviewversionone">
 
     <application
+        android:name=".notification.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.DetailActivity"></activity>
+        <activity android:name=".ListPreparationExam"></activity>
+        <activity android:name=".TabLayoutThree_Logicall" />
+        <activity android:name=".TabLayoutTwo_English" />
+        <activity android:name=".TabLayoutOne_Quant" />
+        <activity android:name=".MCQList" />
+        <activity android:name=".ui.DetailActivity" />
         <activity android:name=".ui.ViewActivity" />
         <activity
             android:name=".MainActivity"
@@ -21,9 +27,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 
+        <service
+            android:name=".notification.FCMMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+    </application>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
